# python-fleet-telemetry

./: .gitignore  BACKLOG.md  README.md  pyproject.toml
docs/plans/: 2026-07-10-python-fleet-telemetry-design.md  2026-07-10-python-fleet-telemetry-implementation.md
examples/: basic.py  end_to_end.py
fbs/: generate.sh  tesla.fbs
fleet_telemetry/: __init__.py  _envelope.py  certs.py  dispatch.py  identity.py  records.py  server.py
fleet_telemetry/_flatbuffers/: tesla_generated.py
fleet_telemetry/certs/: README.md
fleet_telemetry/proto/: vehicle_alert_pb2.py  vehicle_connectivity_pb2.py  vehicle_data_pb2.py  vehicle_data_pb2.pyi  vehicle_error_pb2.py  vehicle_metric_pb2.py
proto/: generate.sh
tests/: test_certs.py  test_dispatch.py  test_end_to_end_example.py  test_envelope.py  test_identity.py  test_proto.py  test_records.py  test_server.py
tests/fixtures/: golden.py
